--- a/src/App.scss
+++ b/src/App.scss
@@ -1,43 +1,61 @@
-@import "~bootstrap/scss/bootstrap";
+.header {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(25px);
+  width: 100vw;
+  justify-content: space-around;
+}
 
-body {
-  transition: background-color 450ms ease-in-out, opacity 120ms linear;
+.header__item {
+  font-size: 1.3em;
 }
 
 .container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  flex-wrap: nowrap;
   color: white;
+  height: 100vh;
 }
 
-.box {
+.colorbox {
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 15vh;
-  min-height: 60px;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.5);
-  filter: blur(20);
-  margin-bottom: 20px;
-
-  font-family: Arial, Helvetica, sans-serif;
-  .noselect {
-    font-weight: 600;
-    font-size: calc(1.3em + 2vw);
-    font-family: "Verdana";
-    margin-right: 10px;
-  }
 }
 
-.color {
-  font-size: inherit;
-  font-family: monospace;
-  font-size: calc(1.3em + 2vw);
+.colorbox__items--background {
+  padding: 10px;
+  transition: .5s;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.colorbox__items--background:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.colorbox__items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  padding: 10px;
+}
+
+.colorbox__items--color {
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  font-family: "Inter",sans-serif;
+  font-variation-settings: "wght" 600;
+  font-size: 1.6rem;
+}
+
+.colorbox__items--img {
+  width: 25px;
 }
 
 .noselect {
@@ -49,19 +67,17 @@ body {
   user-select: none;
 }
 
-.button {
-  border: 1px solid black;
-  font-size: 2rem;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  padding: 10px;
-  transition: 0.5s;
-  outline: none;
-  &:hover {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
   }
-  &:focus {
-    box-shadow: none;
+
+  .colorbox__items {
+    flex-direction: row;
+  }
+
+  .header__item {
+    font-size: 1em;
+    padding-right: 0;
   }
 }
